--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XE
+spring.datasource.username=doctor
+spring.datasource.password=doctor 
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.databse-platform=org.hibernate.dialect.OracleDialect
