Se agregan mejoras de tipos de datos genericos y respuestas de objetos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:oracle:thin:@//localhost:8081/XE
+server.port=8091
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XE
 spring.datasource.username=clients
 spring.datasource.password=clients 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
